linuxmuster-linbo (2.3.12-2) babo62; urgency=low

  * linuxmuster-linbo7:
    - removed atftpd configuration setup.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 11 Nov 2016 11:08:12 +0100

linuxmuster-linbo (2.3.12-1) babo62; urgency=low

  * linuxmuster-linbo7:
    - changed depends to linuxmuster-base7.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 09 Nov 2016 18:23:17 +0100

linuxmuster-linbo (2.3.12-0) babo62; urgency=low

  * fixed patch_registry script filename.
  * further more package consolidation, moving postinst stuff to linuxmuster-linbo-common.
  * fallback to file sync in case of ntfsclone's cluster referenced twice error.
  * excluded partition table from mbr backup and restore of windows systems (another attempt to fix #637).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Oct 2016 11:37:05 +0200

linuxmuster-linbo (2.3.11-0) babo62; urgency=low

  * splitted package in linuxmuster-linbo, which contains the scripts,
    and linuxmuster-linbo-common, which contains the kernel and the grub
    configuration.
  * added supplemental package linuxmuster-linbo7 for lmn7 stuff.
  * reworked source package structure.
  * preinst fix to make pkg installable in lmn7.
  * removed obsolete bios/efi dirs in /var/linbo.
  * added ntpd to busybox (closes #638).
  * build dependencies fixes.
  * moved back to fifo patched tftpd-hpa.
  * added rtc support to linbo kernel.
  * kernel update to 4.4.26.
  * get partition size from /proc/partitions instead of parted (#637).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 23 Oct 2016 13:47:48 +0200

linuxmuster-linbo (2.3.10-0) babo62; urgency=low

  * /dev/mmcblk disknumber fix (closes #626 partially).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 15 Sep 2016 08:59:39 +0200

linuxmuster-linbo (2.3.9-0) babo62; urgency=low

  * added linbo.iso to www_links.
  * minor example fixes.
  * make different grub cd/usb and net boot images for i386-efi and x86_64-efi