@@ -1,24 +1,0 @@
-Windows Registry Editor Version 5.00
-
-[HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Schedule\TaskCache\Boot\{@@uuid@@}]
-"(Standard)"=""
-
-[HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Schedule\TaskCache\Tasks\{@@uuid@@}]
-"Path"="\\linuxmuster-start-tasks"
-"Triggers"=hex:15,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,\
-  00,00,00,00,00,00,00,00,00,00,00,ff,ff,ff,ff,ff,ff,ff,ff,68,21,42,01,48,48,\
-  48,48,db,84,a2,45,48,48,48,48,00,48,48,48,48,48,48,48,00,48,48,48,48,48,48,\
-  48,05,00,00,00,48,48,48,48,0c,00,00,00,48,48,48,48,01,01,00,00,00,00,00,05,\
-  12,00,00,00,48,48,48,48,00,00,00,00,48,48,48,48,38,00,00,00,48,48,48,48,00,\
-  00,00,00,ff,ff,ff,ff,00,00,00,00,ff,ff,ff,ff,07,00,00,00,00,00,00,00,00,00,\
-  00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,\
-  00,00,00,00,00,ff,ff,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,\
-  00,00,00,00,00,00,00,00,00,00,00,00,ff,ff,ff,ff,ff,ff,ff,ff,00,00,00,00,ff,\
-  ff,ff,ff,00,00,00,00,00,00,00,00,00,00,00,00,00,07,00,00,01,ff,ff,ff,00,00,\
-  00,00,00,00,00,00,00,00,00,00
-"DynamicInfo"=hex:03,00,00,00,b3,7a,33,38,c6,0d,d1,01,00,00,00,00,00,00,00,00,\
-  00,00,00,00,00,00,00,00
-
-[HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Schedule\TaskCache\Tree\linuxmuster-start-tasks]
-"Id"="{@@uuid@@}"
-"Index"=dword:00000001
